Fix vertical misalignment in icons

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -122,6 +122,7 @@ h1 {
 
 .path-icon {
   fill: var(--neutral-color-8);
+  transform: translateY(2px);
 }
 
 .popup-form {
